# NexusBridgeHub

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.ru.md  RELEASE_SUMMARY.md  pyproject.toml  setup.py
.github/workflows/: build-workers.yml  ci.yml  publish-pypi.yml  publish.yml
docs/: DEPLOY.ru.md  PUBLISH.ru.md  TESTING.ru.md
examples/: worker_integration.py  worker_integration.ru.py
examples/minimal/: README.md  README.ru.md  _bootstrap.py  controller_en.py  controller_ru.py  generate_tokens.py  worker_en.py  worker_ru.py
scripts/: verify-python-versions.ps1
src/nexusbridge/: __init__.py  auth.py  builder.py  client.py  controller.py  crypto.py  protocol.py  server.py  utils.py  worker_app.py
src/nexusbridgehub/: __init__.py  auth.py  builder.py  client.py  controller.py  crypto.py  protocol.py  server.py  utils.py  version_info.txt  worker_app.py
tests/: test_bridge.py
