[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexusbridge"
version = "0.1.0"
description = "Universal bridge for distributed bot control: bot -> server -> user worker"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "rxzwu", email = "rxzwu@users.noreply.github.com"}
]
requires-python = ">=3.10"
dependencies = [
    "websockets>=13.0",
    "aiohttp>=3.9",
    "cryptography>=42.0",
    "PyJWT>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "build>=1.2",
    "twine>=5.0",
]
builder = [
    "pyinstaller>=6.0",
]

[project.urls]
Homepage = "https://github.com/rxzwu/nexusbridge"
Repository = "https://github.com/rxzwu/nexusbridge"
Issues = "https://github.com/rxzwu/nexusbridge/issues"

[project.scripts]
nexusbridge-server = "nexusbridge.server:main_cli"
nexusbridge-worker = "nexusbridge.worker_app:main_cli"
nexusbridge-build = "nexusbridge.builder:main_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
